# baseball-ml

./: .gitignore  AGENTS.md  README.md  WORKFLOW.md  app.py  pyproject.toml  user_config.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
.streamlit/: config.toml
docs/: NEXT_SESSION_HANDOFF.md  architecture.md  baseline_v0_audit.md  features.md  modeling.md  review_runtime_checks.md  stage_gates.md
docs/handoffs/: AGE-307_MODEL_PERFORMANCE_ARTIFACTS.md  AGE-317.md  AGE-319.md
docs/reviews/: AGE-317.md  AGE-319.md  feature-research.md
src/mlb_props_lab/: __init__.py  __main__.py  cli.py  dashboard.py  feature_registry.py  reports.py  statcast_features.py  targets.py
tests/: stage_gate_fixtures.py  test_backfill.py  test_backtest.py  test_candidate_models.py  test_cli.py  test_contracts.py  test_dashboard_app.py  test_dashboard_data.py  test_data_alignment.py  test_edge.py  test_env.py  test_feature_registry.py  test_feature_report.py  test_ingest_atomic_writes.py  test_lineup_matchup_features.py  test_market_report.py  test_mlb_stats_api_ingest.py  test_model_comparison.py  test_model_validation.py  test_modeling.py  test_odds_api_ingest.py  test_paper_tracking.py  test_park_factors.py  test_pitcher_skill_features.py  test_pricing.py  test_runtime_smokes.py  test_stage_gates.py  test_starter_dataset.py  test_starter_ml_report.py  test_statcast_feature_ingest.py  test_statcast_features.py  test_targets.py  test_tracking.py  test_umpire_ingest.py  test_wager_card.py  test_weather_ingest.py  test_workload_leash_features.py
(+83 files in other folders)
