[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mlb-props-stack"
version = "0.1.0"
description = "MLB props modeling scaffold focused on pitcher strikeout markets."
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "Dylan McCavitt" }
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
mlb-props-stack = "mlb_props_stack.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
