[project]
name = "mlb-props-lab"
version = "0.1.0"
description = "Source-backed MLB pitcher strikeout props research and reporting scaffold."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
mlb-props-lab = "mlb_props_lab.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mlb_props_lab"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
